# TemplateVault-Assets

./: .gitignore  DESIGN_SPEC.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
data/: circle_index.json  versions.json
scripts/: extract_version.py  publish_template.py
src/: circle_publisher.py  content_builder.py  markdown_to_tiptap.py  version_tracker.py
